my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ETQMIC/T_ETQMIC-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_ETQMIC_STRUCT_H
#define T_ETQMIC_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_ETQMIC(void);


#endif /* not T_ETQMIC_STRUCT_H */
